styles/base.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

header span {
    font-size: 30px;
    margin-left: 16px;
}

header,
footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #1D4E89;
    color: white;
    padding: 50px;
}

nav {
    display: flex;
    flex-direction: column;
    background-color: #F79256;
}

.active {
    background-color: rgba(0, 0, 0, 0.3);
}

.active a {
    color: white;
}

nav a:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

nav a {
    display: block;
    padding: 20px;
    color: black;
    font-family: "Roboto Slab", serif;
    font-weight: 600;
}

body {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    text-align: center;
}

section {
    border: 1px solid black;
    margin-bottom: 16px;
}

section ul {
    text-align: left;
    margin: 16px;
}

section li {
    margin-bottom: 8px;
}

section div {
    margin: 16px;
}

section h2 {
    background-color: #1D4E89;
    display: block;
    padding: 16px;
    width: 100%;
    color: white;
}

main {
    margin: 25px;
}

h1 {
    font-family: "Roboto Slab", serif;
    font-weight: 900;
    font-style: normal;
}

h2 {
    font-family: "Roboto Slab", serif;
    font-weight: 600;
    font-style: normal;

}

hr {
    grid-column: 1/3;
    margin-bottom: 16px;
}

footer {
    flex-direction: column;
    font-size: large;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
}

p {
    margin-bottom: 16px;
}

